crates/doodle-core/tests/snapshots/broken_syntax__06_chained_comparison.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[chained-comparison]: comparisons don't chain — write `a < b and b < c`
  --> 06-chained-comparison.doodle:2:12
2 |   if a < b < c then
  |            ^
